kubernetesfiles/frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: githubview-frontend-service
spec:
  selector:
    app: githubviewfrontendserviceapp
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
